# docker-dns

./: .gitignore  Cargo.toml  Changelog.md  LICENCE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
examples/: docker_client_example.rs
src/: custom_handler.rs  docker_client.rs  lib.rs  main.rs  resolver.rs  server.rs  strip_prefix_sane.rs
systemd/: README.md  docker-dns.conf  docker-dns.service
tests/: integration_test.rs
