[package]
name = "docker-dns"
version = "1.0.0"
edition = "2024"

[dependencies]
hickory-server = "0.24"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
bollard = "0.18"
strip-prefix-suffix-sane = "0.1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
hickory-client = "0.24"
